# germinare-challenge

./: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
desafio_germinare/: app.py
desafio_germinare/config/: settings.py
desafio_germinare/database/: database.py  models.py
desafio_germinare/routers/: soybean_meal_price.py
desafio_germinare/schemas/: soybean_meal_price.py
desafio_germinare/services/: soybean_meal_price.py
desafio_germinare/utils/: dependencies.py  exceptions.py  sanitize.py  validators.py
migrations/: env.py
migrations/versions/: 0039db1e5e04_create_soybean_meal_price_table.py
tests/: conftest.py  factories.py  test_app.py  test_db.py  test_soybean_meal_prices.py
