[tool.poetry]
name = "desafio-germinare"
version = "0.1.0"
description = ""
authors = ["Juliana Zacharias <julianazacharias.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.11.2"
httpx = "^0.28.1"
factory-boy = "^3.3.3"
freezegun = "^1.5.1"
testcontainers = "^4.9.2"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = false
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = false
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev desafio_germinare/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=desafio_germinare -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
